авторизированный запрос
- допилил регистрацию
- сделал авторизацию
- сделал интерактивную документацию
- сделал авторизированный запрос
