# src/api/http/authorization/index.ts
@@ -1,12 +1,16 @@
 import express from 'express';
 
 export default (app: express.Application) => {
-    // app.get(
-    //     '/signin', 
-    //     require('./signin').default
-    // );
+    app.post(
+        '/signin', 
+        require('./signIn').default
+    );
     app.post(
         '/signup', 
         require('./signUp').default
+    );
+    app.get(
+        '/authme', 
+        require('./authMe').default
     );
 };
